Revert "UX心理学に基づく視認性改善"
This reverts commit b7ec05bb04f53a6acefd952a48182d53a9572387.

--- a/docs/90_step-up/day31-90.md
+++ b/docs/90_step-up/day31-90.md
@@ -7,13 +7,11 @@ last_checked: "2025-12-23"
 
 # 着任31〜90日
 
-!!! abstract "進捗"
-    **ステップ 2/3**：着任0-30日 → 31-90日 ← いまここ → 91日-1年
+## まずこれだけ
 
-!!! tip "まずこれだけ"
-    31〜90日は「動く」時期です。
-    小さなことから改善を始めます。
-    スタッフと一緒に考える姿勢を見せます。
+31〜90日は「動く」時期です。
+小さなことから改善を始めます。
+スタッフと一緒に考える姿勢を見せます。
 
 ## このページのゴール
 
@@ -48,19 +46,22 @@ last_checked: "2025-12-23"
 | 上司に報告する | 「○○を変えたい」 |
 | 実行する | まずやってみる |
 
-!!! warning "例外"
-    - 大きな問題があれば、上司と相談して対応
-    - 無理に変えようとしない
+## 例外
 
-!!! info "相談"
-    - **誰に**：直属の上司
-    - **いつまでに**：月に1回は状況報告
-    - **何を言う**：「こんな課題がある」「こうしたいと思う」
+- 大きな問題があれば、上司と相談して対応
+- 無理に変えようとしない
 
-!!! danger "禁止"
-    - 一度にたくさん変えようとする
-    - スタッフに相談せず決める
-    - 失敗を恐れて何もしない
+## 相談
+
+- **誰に**：直属の上司
+- **いつまでに**：月に1回は状況報告
+- **何を言う**：「こんな課題がある」「こうしたいと思う」
+
+## 禁止
+
+- 一度にたくさん変えようとする
+- スタッフに相談せず決める
+- 失敗を恐れて何もしない
 
 ## チェック
 
@@ -69,11 +70,12 @@ last_checked: "2025-12-23"
 - [ ] 小さな改善を始めたか
 - [ ] 上司に報告したか
 
+## 次のステップ
+
+- [91日〜1年](day91-365.md)へ
+
 ## 関連
 
 - [任せる](../01_common-os/delegate.md)
 - [会議](../01_common-os/meeting.md)
 - [数字](../02_management-os/numbers.md)
-
-!!! success "次のステップ"
-    90日経ったら → [91日〜1年に進む](day91-365.md)
