--- a/docs/90_step-up/day91-365.md
+++ b/docs/90_step-up/day91-365.md
@@ -7,13 +7,11 @@ last_checked: "2025-12-23"
 
 # 着任91日〜1年
 
-!!! abstract "進捗"
-    **ステップ 3/3**：着任0-30日 → 31-90日 → 91日-1年 ← いまここ
+## まずこれだけ
 
-!!! tip "まずこれだけ"
-    91日以降は「広げる」時期です。
-    チームをまとめて、目標に向かって進みます。
-    自分だけでなく、スタッフが育つ環境を作ります。
+91日以降は「広げる」時期です。
+チームをまとめて、目標に向かって進みます。
+自分だけでなく、スタッフが育つ環境を作ります。
 
 ## このページのゴール
 
@@ -47,14 +45,16 @@ last_checked: "2025-12-23"
 | 変わったことを整理する | 良くなったこと、課題 |
 | 次の目標を考える | 2年目に向けて |
 
-!!! warning "例外"
-    - 大きな問題があれば、すべてを止めて対応
-    - 自分だけで抱えない
+## 例外
 
-!!! info "相談"
-    - **誰に**：直属の上司
-    - **いつまでに**：四半期に1回は振り返り
-    - **何を言う**：「この3か月でこうなった」「次はこうしたい」
+- 大きな問題があれば、すべてを止めて対応
+- 自分だけで抱えない
+
+## 相談
+
+- **誰に**：直属の上司
+- **いつまでに**：四半期に1回は振り返り
+- **何を言う**：「この3か月でこうなった」「次はこうしたい」
 
 ## チェック
 
@@ -69,7 +69,3 @@ last_checked: "2025-12-23"
 - [教える](../02_management-os/teaching.md)
 - [1対1](../02_management-os/one-on-one.md)
 - [数字](../02_management-os/numbers.md)
-
-!!! success "1年目完了"
-    おめでとうございます。1年目を乗り越えました。
-    2年目は、さらにチームを強くしていきましょう。
